# capvalidator

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  release-to-pypi.yml  run-unit-tests.yml  test-code-quality.yml  tests.yml  unit-tests.yml
cap_validator/: __init__.py
cap_validator/verify_file/: __init__.py
src/cap_validator/: __init__.py  cli.py  helpers.py  integrity.py  schema.py  signature.py
src/cap_validator/validate_schema/: __init__.py
src/capvalidator/: __init__.py  cli.py  helpers.py  integrity.py  schema.py  signature.py  validate.py
tests/: conftest.py  helpers.py  integrity.py  schema.py  signature.py  test_cap_validator.py  test_dates.py  test_init.py  test_integrity.py  test_schema.py  test_signature.py  test_validation.py
tests/data/: incorrect_digest.xml  incorrect_signature.xml
tests/data/at/: valid.xml
tests/data/be/: valid.xml
tests/data/bf/: invalid_certificate.xml
tests/data/bz/: invalid_certificate.xml  invalid_digest.xml  invalid_schema.xml  invalid_signature.xml  no_signature.xml  valid.xml
tests/data/ca/: valid.xml
tests/data/cm/: invalid_certificate.xml  invalid_digest.xml  invalid_schema.xml  invalid_signature.xml  no_signature.xml  valid.xml
tests/data/cn/: valid.xml
tests/data/de/: valid.xml
tests/data/dz/: valid.xml
tests/data/us/: valid.xml
tests/utils/: helpers.py
